# stratum-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: StratumClient.cpp  StratumClient.hpp  StratumResponse.hpp  Work.hpp  main.cpp
